--- a/src/views/errors/service-unavailable.njk
+++ b/src/views/errors/service-unavailable.njk
@@ -19,7 +19,7 @@
       Monday to Friday, 8.30am to 5pm (except bank holidays)
     </p>
     <p class="govuk-body">
-      <a href="https://www.gov.uk/call-charges" class="govuk-link">Find out about call charges (opens in new tab)</a>.
+      <a href="https://www.gov.uk/call-charges" class="govuk-link" target="_blank">Find out about call charges (opens in new tab)</a>.
     </p>
     <p class="govuk-body">
       Email: <a href="mailto:ruralpayments@defra.gov.uk" class="govuk-link">ruralpayments@defra.gov.uk</a>
