added PI charter and improved security

--- a/src/views/layout.njk
+++ b/src/views/layout.njk
@@ -44,15 +44,35 @@
       items: [
         {
           href: "https://www.gov.uk/help/privacy-notice",
-          text: "Privacy"
+          text: "Privacy",
+          attributes: {
+            target: "_blank",
+            rel: "noopener noreferrer"
+          }
         },
         {
           href: "https://www.gov.uk/help/cookies",
-          text: "Cookies"
+          text: "Cookies",
+          attributes: {
+            target: "_blank",
+            rel: "noopener noreferrer"
+          }
         },
         {
           href: "https://www.gov.uk/help/accessibility-statement",
-          text: "Accessibility statement"
+          text: "Accessibility statement",
+          attributes: {
+            target: "_blank",
+            rel: "noopener noreferrer"
+          }
+        },
+        {
+          href: "https://www.gov.uk/government/organisations/rural-payments-agency/about/personal-information-charter",
+          text: "Personal Information Charter",
+          attributes: {
+            target: "_blank",
+            rel: "noopener noreferrer"
+          }
         }
       ]
     }
