Add phase-banner to all pages (#4)

--- a/src/views/layout.njk
+++ b/src/views/layout.njk
@@ -21,6 +21,9 @@
     serviceUrl: serviceUrl,
     useTudorCrown: true
   }) }}
+  <div class="govuk-width-container">
+    {% include "common/phase-banner/phase-banner.njk" %}
+  </div>
   {% include "common/navigation/navigation.njk" %}
 {% endblock %}
 
