--- a/src/views/errors/service-problem.njk
+++ b/src/views/errors/service-problem.njk
@@ -2,9 +2,9 @@
 
 {% block error_content %}
 <h1 class="govuk-heading-l">
-  Sorry, the service is unavailable
+  Sorry, there is a problem with the service
 </h1>
 <p class="govuk-body">
-  You will be able to use the service later.
+  Try again later.
 </p>
 {% endblock %}
