--- a/src/views/layout.njk
+++ b/src/views/layout.njk
@@ -10,6 +10,9 @@
 
 {% block head %}
   <link href="{{ getAssetPath('stylesheets/application.scss') }}" rel="stylesheet">
+  {% if heading %}
+    <meta name="description" content="{{ heading }}">
+  {% endif %}
 {% endblock %}
 
 {% block header %}
@@ -24,7 +27,6 @@
   <div class="govuk-width-container">
     {% include "common/phase-banner/phase-banner.njk" %}
   </div>
-  {% include "common/navigation/navigation.njk" %}
 {% endblock %}
 
 {% block pageTitle %}
