reworked errors handling approach, adjusted unit and integration tests, added a conditional env_var to ensure that error routes are only avavailable in non-prod

--- a/src/views/errors/layout.njk
+++ b/src/views/errors/layout.njk
@@ -1,5 +1,8 @@
 {% extends "common/layout.njk" %}
 
+{% set pageTitle = pageTitle | default("Error") %}
+{% set metaDescription = metaDescription | default("There was a problem") %}
+
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
