--- a/src/views/errors/page-not-found.njk
+++ b/src/views/errors/page-not-found.njk
@@ -1,4 +1,7 @@
-{% extends "layout.njk" %}
+{% extends "common/layout.njk" %}
+
+{% set pageTitle = "Page not found" %}
+{% set metaDescription = "We could not find this page. Check the web address is correct and try again." %}
 
 {% block content %}
 <div class="govuk-grid-row">
