--- a/src/views/errors/service-problem.njk
+++ b/src/views/errors/service-problem.njk
@@ -1,5 +1,8 @@
 {% extends "errors/layout.njk" %}
 
+{% set pageTitle = "Sorry, there is a problem with the service" %}
+{% set metaDescription = "There is a problem with this service, but you can contact us." %}
+
 {% block error_content %}
 <h1 class="govuk-heading-l">
   Sorry, there is a problem with the service
