--- a/src/views/common/layout.njk
+++ b/src/views/common/layout.njk
@@ -10,8 +10,8 @@
 
 {% block head %}
   <link href="{{ getAssetPath('stylesheets/application.scss') }}" rel="stylesheet">
-  {% if heading %}
-    <meta name="description" content="{{ heading }}">
+  {% if metaDescription %}
+    <meta name="description" content="{{ metaDescription }}">
   {% endif %}
 {% endblock %}
 
