--- a/src/views/errors/service-unavailable.njk
+++ b/src/views/errors/service-unavailable.njk
@@ -1,5 +1,8 @@
 {% extends "errors/layout.njk" %}
 
+{% set pageTitle = "Sorry, the service is unavailable" %}
+{% set metaDescription = "The service is not currently available, but you can contact us." %}
+
 {% block error_content %}
 <h1 class="govuk-heading-l">
   Sorry, the service is unavailable
