added cookies footer element,route and view

--- a/src/views/common/layout.njk
+++ b/src/views/common/layout.njk
@@ -55,13 +55,9 @@
             rel: "noopener noreferrer"
           }
         },
-        {
-          href: "https://www.gov.uk/help/cookies",
-          text: "Cookies",
-          attributes: {
-            target: "_blank",
-            rel: "noopener noreferrer"
-          }
+         {
+          href: "/cookies",
+          text: "Cookies"
         },
         {
           href: "https://www.gov.uk/help/accessibility-statement",
