--- a/src/views/cookies.njk
+++ b/src/views/cookies.njk
@@ -2,6 +2,11 @@
 {% extends 'common/layout.njk' %}
 
 {% from "govuk/components/table/macro.njk" import govukTable %}
+{% from "common/navigation/back-link.njk" import appBackLink %}
+
+{% block beforeContent %}
+    {{ appBackLink() }}
+{% endblock %}
 
 {% block content %}
   {{ appHeading({
