Added contact-us route, footer element and view

--- a/src/views/common/layout.njk
+++ b/src/views/common/layout.njk
@@ -38,6 +38,10 @@
     meta: {
       items: [
         {
+          href: "/contact-us",
+          text: "Contact us"
+        },
+        {
           href: "https://www.gov.uk/help/privacy-notice",
           text: "Privacy",
           attributes: {
