changed the route URL

--- a/src/views/common/layout.njk
+++ b/src/views/common/layout.njk
@@ -38,7 +38,7 @@
     meta: {
       items: [
         {
-          href: "/contact-us",
+          href: "/contact-help",
           text: "Contact us"
         },
         {
