--- a/src/views/business-details/business-name-change.njk
+++ b/src/views/business-details/business-name-change.njk
@@ -1,6 +1,27 @@
 {% extends 'common/layout.njk' %}
 
 {% from "govuk/components/table/macro.njk" import govukTable %}
+{% from "govuk/components/input/macro.njk" import govukInput %}
+{% from "govuk/components/button/macro.njk" import govukButton %}
+{% from "common/navigation/back-link.njk" import appBackLink %}
+{% from "common/sub-header/macro.njk" import subHeader %}
+
+{{ subHeader(
+    businessName="Agile Farm Ltd", 
+    sbi="123456789", 
+    userName="Alfred Waldron"
+) }}
+
+{% block beforeContent %}
+    {{ subHeader(
+    businessName="Agile Farm Ltd", 
+    sbi="123456789", 
+    userName="Alfred Waldron"
+) }}
+
+    {{ appBackLink() }}
+
+{% endblock %}
 
 {% block content %}
 
@@ -22,4 +43,4 @@
   <a class="govuk-link" href="#">Cancel</a>
 </div>
 
-  {% endblock %}
+{% endblock %}
