injected heading and metaName with correct values

--- a/src/views/business-details/business-name-change.njk
+++ b/src/views/business-details/business-name-change.njk
@@ -6,6 +6,9 @@
 {% from "common/navigation/back-link.njk" import appBackLink %}
 {% from "common/sub-header/macro.njk" import subHeader %}
 
+{% set pageTitle = "What is your business name? - Manage your land and farm businesses - GOV.UK" %}
+{% set metaDescription = "Update the name for your business." %}
+
 {% block beforeContent %}
     {{ subHeader(
     businessName="Agile Farm Ltd", 
