added bd01 and bd03 views

--- a/src/views/common/layout.njk
+++ b/src/views/common/layout.njk
@@ -42,6 +42,10 @@
           text: "Contact us"
         },
         {
+          href: "/contact-us",
+          text: "Contact us"
+        },
+        {
           href: "https://www.gov.uk/help/privacy-notice",
           text: "Privacy",
           attributes: {
