--- a/src/views/business-details/business-details.njk
+++ b/src/views/business-details/business-details.njk
@@ -40,7 +40,7 @@
           Business name
         </dt>
         <dd class="govuk-summary-list__value">
-          Agile Farm Ltd
+          {{ businessName }}
         </dd>
         <dd class="govuk-summary-list__actions">
           <a class="govuk-link govuk-link--no-visited-state" href="/business-name-change">Change<span class="govuk-visually-hidden"> business name</span></a>
