formatted service names

--- a/src/views/business-details/business-name-change.njk
+++ b/src/views/business-details/business-name-change.njk
@@ -6,7 +6,7 @@
 {% from "common/navigation/back-link.njk" import appBackLink %}
 {% from "common/sub-header/macro.njk" import subHeader %}
 
-{% set pageTitle = "What is your business name? - Manage your land and farm businesses - GOV.UK" %}
+{% set pageTitle = "What is your business name?" %}
 {% set metaDescription = "Update the name for your business." %}
 
 {% block beforeContent %}
