--- a/src/views/business-details/business-address-check.njk
+++ b/src/views/business-details/business-address-check.njk
@@ -5,7 +5,7 @@
 {% from "common/navigation/back-link.njk" import appBackLink %}
 {% from "common/sub-header/macro.njk" import subHeader %}
 
-{% set pageTitle = "Check your business address is correct before submitting - Manage your land and farm businesses - GOV.UK" %}
+{% set pageTitle = "Check your business address is correct before submitting" %}
 {% set metaDescription = "Check the address for your business is correct." %}
 
 {% block beforeContent %}
