--- a/src/views/business-details/business-address-form.njk
+++ b/src/views/business-details/business-address-form.njk
@@ -6,7 +6,7 @@
 {% from "common/navigation/back-link.njk" import appBackLink %}
 {% from "common/sub-header/macro.njk" import subHeader %}
 
-{% set pageTitle = "Enter your business address - Manage your land and farm businesses - GOV.UK" %}
+{% set pageTitle = "Enter your business address" %}
 {% set metaDescription = "Enter the address for your business." %}
 
 {% block beforeContent %}
