--- a/src/views/business-details/business-details.njk
+++ b/src/views/business-details/business-details.njk
@@ -4,7 +4,7 @@
 {% from "govuk/components/notification-banner/macro.njk" import govukNotificationBanner %}
 {% from "common/sub-header/macro.njk" import subHeader %}
 
-{% set pageTitle = "View and update your business details - Manage your land and farm businesses - GOV.UK" %}
+{% set pageTitle = "View and update your business details" %}
 {% set metaDescription = "View and change the details for your business." %}
 
 {% block beforeContent %}
