--- a/src/views/business-details/business-phone-numbers-change.njk
+++ b/src/views/business-details/business-phone-numbers-change.njk
@@ -42,17 +42,12 @@
             Enter at least one phone number
           </div>
 
-          {% if errors._error %}
-            <span id="business-phone-error" class="govuk-error-message">
-              <span class="govuk-visually-hidden">Error:</span> {{ errors._error.text }}
-            </span>
-          {% endif %}
-
           {{ govukInput({
           label: {
             text: "Business telephone number"
           },
           classes: "govuk-input--width-20",
+          type: "tel",
           id: "businessTelephone",
           name: "businessTelephone",
           value: businessTelephone,
@@ -67,6 +62,7 @@
             text: "Business mobile number"
           },
           classes: "govuk-input--width-20",
+          type: "tel",
           id: "businessMobile",
           name: "businessMobile",
           value: businessMobile,
