--- a/src/views/business-details/business-phone-numbers-change.njk
+++ b/src/views/business-details/business-phone-numbers-change.njk
@@ -1,6 +1,7 @@
 {% extends 'common/layout.njk' %}
 
 {% from "govuk/components/input/macro.njk" import govukInput %}
+{% from "govuk/components/fieldset/macro.njk" import govukFieldset %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 {% from "common/navigation/back-link.njk" import appBackLink %}
@@ -32,6 +33,7 @@
     {% endif %}
 
       <form method="post" novalidate>
+
         <fieldset class="govuk-fieldset">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
             <h1 class="govuk-fieldset__heading">
