--- a/src/views/business-details/business-address-check.njk
+++ b/src/views/business-details/business-address-check.njk
@@ -51,7 +51,7 @@
             {% if addressCountry %}{{ addressCountry }}{% endif %}
           </dd>
           <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="/business-address-change">Change<span class="govuk-visually-hidden"> business address</span></a>
+            <a class="govuk-link" href="/business-address-enter">Change<span class="govuk-visually-hidden"> business address</span></a>
           </dd>
         </div>
       </dl>
@@ -61,7 +61,7 @@
           text: "Submit"
         }) }}
       </div>
-      <p class="govuk-body"><a href="details-business-details" class="govuk-link govuk-link--no-visited-state">Cancel</a></p>
+      <p class="govuk-body"><a href="/business-details" class="govuk-link govuk-link--no-visited-state">Cancel</a></p>
     </form>
   </div>
 </div>
