--- a/src/views/business-details/business-name-change.njk
+++ b/src/views/business-details/business-name-change.njk
@@ -35,27 +35,29 @@
     {% endif %}
 
     <form method="post" novalidate>
-      {{ govukInput({
-        label: {
-          text: "What is your business name?",
-          classes: "govuk-label--l",
-          isPageHeading: true
-        },
-        id: "business-name",
-        name: "businessName",
-        value: businessName,
-        errorMessage: errors.businessName and {
-          text: errors.businessName.text
-        }
+      <div class="govuk-form-group">
+        {{ govukInput({
+          label: {
+            text: "What is your business name?",
+            classes: "govuk-label--l",
+            isPageHeading: true
+          },
+          id: "business-name",
+          name: "businessName",
+          value: businessName,
+          errorMessage: errors.businessName and {
+            text: errors.businessName.text
+          }
+        }) }}
+      </div>
+
+      {{ govukButton({
+        text: "Continue"
       }) }}
 
-      <div class="govuk-button-group">
-        {{ govukButton({
-          text: "Continue"
-        }) }}
-
-        <a class="govuk-link" href="/business-details">Cancel</a>
-      </div>
+      <p class="govuk-body">
+        <a href="/business-details" class="govuk-link govuk-link--no-visited-state">Cancel</a>
+      </p>
     </form>
   </div>
 </div>
