--- a/src/views/business-details/business-phone-numbers-change.njk
+++ b/src/views/business-details/business-phone-numbers-change.njk
@@ -61,7 +61,7 @@
 
           {{ govukInput({
           label: {
-            text: "Business mobile number"
+            text: "Business mobile phone number"
           },
           classes: "govuk-input--width-20",
           type: "tel",
@@ -78,6 +78,7 @@
         {{ govukButton({
         text: "Continue"
       }) }}
+      
         <p class="govuk-body">
           <a href="/business-details" class="govuk-link govuk-link--no-visited-state">Cancel</a>
         </p>
