--- a/src/views/business-details/business-phone-numbers-check.njk
+++ b/src/views/business-details/business-phone-numbers-check.njk
@@ -63,13 +63,13 @@
         </div>
       </dl>
 
-      <div class="govuk-button-group">
         {{ govukButton({
           text: "Submit"
         }) }}
 
-        <a class="govuk-link" href="/business-details">Cancel</a>
-      </div>
+        <p class="govuk-body">
+          <a href="/business-details" class="govuk-link govuk-link--no-visited-state">Cancel</a>
+        </p>
     </form>
   </div>
 </div>
