--- a/src/views/business-details/business-name-check.njk
+++ b/src/views/business-details/business-name-check.njk
@@ -22,39 +22,41 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <form method="post" novalidate>
-      <h1 class="govuk-heading-l">
-        Check your business name is correct before submitting
-      </h1>
+      <div class="govuk-form-group">
+        <h1 class="govuk-heading-l">
+          Check your business name is correct before submitting
+        </h1>
 
-      {{ govukSummaryList({
-        rows: [
-          {
-            key: {
-              text: "Business name"
-            },
-            value: {
-              text: businessName
-            },
-            actions: {
-              items: [
-                {
-                  href: "/business-name-change",
-                  text: "Change",
-                  visuallyHiddenText: "business name"
-                }
-              ]
+        {{ govukSummaryList({
+          rows: [
+            {
+              key: {
+                text: "Business name"
+              },
+              value: {
+                text: businessName
+              },
+              actions: {
+                items: [
+                  {
+                    href: "/business-name-change",
+                    text: "Change",
+                    visuallyHiddenText: "business name"
+                  }
+                ]
+              }
             }
-          }
-        ]
+          ]
+        }) }}
+      </div>
+
+      {{ govukButton({
+        text: "Submit"
       }) }}
 
-      <div class="govuk-button-group">
-        {{ govukButton({
-          text: "Submit"
-        }) }}
-
-        <a class="govuk-link" href="/business-details">Cancel</a>
-      </div>
+      <p class="govuk-body">
+        <a href="/business-details" class="govuk-link govuk-link--no-visited-state">Cancel</a>
+      </p>
     </form>
   </div>
 </div>
