--- a/src/views/business-details/business-email-change.njk
+++ b/src/views/business-details/business-email-change.njk
@@ -42,6 +42,7 @@
             classes: "govuk-label--l",
             isPageHeading: true
           },
+          classes: "govuk-input--width-20",
           id: "business-email",
           name: "businessEmail",
           value: businessEmail,
