--- a/src/views/business-details/business-details.njk
+++ b/src/views/business-details/business-details.njk
@@ -18,11 +18,11 @@
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    {% if showSuccessBanner %}
+    {% if showSuccessBanner and successMessage %}
       {{ govukNotificationBanner({
         type: "success",
         titleText: "Success",
-        html: "<h3 class=\"govuk-notification-banner__heading\">You have updated your business name</h3>"
+        html: "<h3 class=\"govuk-notification-banner__heading\">" + successMessage + "</h3>"
       }) }}
     {% endif %}
 
