--- a/src/views/common/layout.njk
+++ b/src/views/common/layout.njk
@@ -39,7 +39,7 @@
       items: [
         {
           href: "/contact-help",
-          text: "Contact us"
+          text: "Contact help"
         },
         {
           href: "/contact-us",
@@ -53,7 +53,7 @@
             rel: "noopener noreferrer"
           }
         },
-         {
+        {
           href: "/cookies",
           text: "Cookies"
         },
