--- a/src/views/errors/page-not-found.njk
+++ b/src/views/errors/page-not-found.njk
@@ -14,7 +14,7 @@
       If you pasted the web address, check you copied the entire address.
     </p>
     <p class="govuk-body">
-      If the web address is correct or you selected a link or button, <a href="/contact-us" class="govuk-link">contact Rural Payments</a> if you need to speak to someone about your land or farm business.
+      If the web address is correct or you selected a link or button, <a href="/contact-help" class="govuk-link">contact Rural Payments</a> if you need to speak to someone about your land or farm business.
     </p>
   </div>
 </div>
