--- a/src/views/footer/contact-help.njk
+++ b/src/views/footer/contact-help.njk
@@ -11,26 +11,7 @@
     <div class="govuk-grid-column-two-thirds">
       <div class="govuk-body" data-testid="app-page-body">
         <h1 class="govuk-heading-l">Contact Rural Payments for help</h1>
-        
-        <p class="govuk-body">
-          Phone: 03000 200 301
-        </p>
-        
-        <p class="govuk-body">
-          Monday to Friday, 8.30am to 5pm (except bank holidays)
-        </p>
-        
-        <p class="govuk-body">
-          <a href="https://www.gov.uk/call-charges" class="govuk-link" target="_blank">Find out about call charges (opens in new tab)</a>.
-        </p>
-        
-        <p class="govuk-body">
-          Email: <a href="mailto:ruralpayments@defra.gov.uk" class="govuk-link">ruralpayments@defra.gov.uk</a>
-        </p>
-        
-        <p class="govuk-body">
-          We aim to respond to emails within 10 working days.
-        </p>
+        {% include 'common/contact/contact-us.njk' %}
       </div>
     </div>
   </div>
