BD15 - legal status change (#31)
* legal status change

Co-authored-by: Rana Salem <ranatasalem@gmail.com>

--- a/src/views/business-details/business-details.njk
+++ b/src/views/business-details/business-details.njk
@@ -164,7 +164,7 @@
           Sole proprietorship
         </dd>
         <dd class="govuk-summary-list__actions">
-          <a class="govuk-link govuk-link--no-visited-state" href="#">Change<span class="govuk-visually-hidden"> business legal status</span></a>
+          <a class="govuk-link govuk-link--no-visited-state" href="/business-legal-status-change">Change<span class="govuk-visually-hidden"> business legal status</span></a>
         </dd>
       </div>
       <div class="govuk-summary-list__row">
