pr review: fix typo

--- a/src/views/business-details/business-type-change.njk
+++ b/src/views/business-details/business-type-change.njk
@@ -7,7 +7,7 @@
 
 {% set pageTitle = "Change your business type" %}
 {% set metaDescription = "Update the type of your business." %}
-{% set businessType = "Central or local governmen" %}
+{% set businessType = "Central or local government" %}
 
 {% block beforeContent %}
   {{ subHeader(
