convert all existing tests (jest -> vitest)

--- a/src/views/home.njk
+++ b/src/views/home.njk
@@ -32,7 +32,7 @@
             <a href="https://github.com/mozilla/node-convict">Node Convict</a>
           </li>
           <li>
-            <a href="https://jestjs.io/">Jest testing</a>
+            <a href="https://vijs.io/">vi testing</a>
           </li>
           <li>GitHub Actions Pull Request and Publish jobs</li>
           <li>
