--- a/src/views/business-details/business-legal-status-change.njk
+++ b/src/views/business-details/business-legal-status-change.njk
@@ -21,7 +21,7 @@
         
      <p class="govuk-body">If your legal status is incorrect, contact the Rural Payments Agency to update it.</p>
 
-      <<h2 class="govuk-heading-m">Contact the Rural Payments Agency</h2>
+      <h2 class="govuk-heading-m">Contact the Rural Payments Agency</h2>
       <p class="govuk-body">Phone: 03000 200 301</p>
       <p class="govuk-body">Monday to Friday, 8.30am to 5pm (except bank holidays)</p>
       <p class="govuk-body"><a class="govuk-link govuk-link--no-visited-state" href="http://www.gov.uk/call-charges" rel="noreferrer noopener" target="_blank">Find out about call charges (opens in new tab)</a>.</p>
