sub header changed

--- a/src/views/business-details/business-legal-status-change.njk
+++ b/src/views/business-details/business-legal-status-change.njk
@@ -9,7 +9,7 @@
 
 {% block beforeContent %}
   {{ subHeader(
-    businessName="Agile Farm Ltd", 
+    businessName=businessName, 
     sbi="123456789", 
     userName="Alfred Waldron"
 ) }}
