--- a/src/views/common/sub-header/macro.njk
+++ b/src/views/common/sub-header/macro.njk
@@ -2,7 +2,7 @@
 <div class="govuk-grid-row sub-header-container govuk-!-padding-top-3">
 
   <div class="govuk-grid-column-two-thirds">
-      <h3 class="govuk-heading-s govuk-!-margin-bottom-1">{{ businessName }}</h3>
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-1">businessName </h3>
       <p class="govuk-body-s govuk-!-margin-bottom-2">Single business identifier (SBI): {{ sbi }}</p>
   </div>
 
