--- a/src/views/business-details/business-details.njk
+++ b/src/views/business-details/business-details.njk
@@ -9,8 +9,8 @@
 
 {% block beforeContent %}
     {{ subHeader(
-    businessName=businessName, 
-    sbi="123456789", 
+    businessName=businessName,
+    sbi="123456789",
     userName="Alfred Waldron"
 ) }}
 {% endblock %}
@@ -54,7 +54,7 @@
           {{ formattedAddress | safe }}
         </dd>
         <dd class="govuk-summary-list__actions">
-          <a class="govuk-link govuk-link--no-visited-state" href="/business-address-enter">Change<span class="govuk-visually-hidden"> business address</span></a>
+          <a class="govuk-link govuk-link--no-visited-state" href="/business-details/address">Change<span class="govuk-visually-hidden"> business address</span></a>
         </dd>
       </div>
       <div class="govuk-summary-list__row">
@@ -111,7 +111,7 @@
           Single business identifier (SBI)
         </dt>
         <dd class="govuk-summary-list__value">
-          123456789 
+          123456789
         </dd>
       </div>
       <div class="govuk-summary-list__row">
@@ -130,7 +130,7 @@
           Trader number
         </dt>
         <dd class="govuk-summary-list__value">
-          987654 
+          987654
         </dd>
       </div>
       <div class="govuk-summary-list__row">
@@ -138,7 +138,7 @@
           Vendor registration number
         </dt>
         <dd class="govuk-summary-list__value">
-          699368 
+          699368
         </dd>
       </div>
       <div class="govuk-summary-list__row">
