--- a/src/views/business-details/business-details.njk
+++ b/src/views/business-details/business-details.njk
@@ -4,27 +4,25 @@
 {% from "govuk/components/notification-banner/macro.njk" import govukNotificationBanner %}
 {% from "common/sub-header/macro.njk" import subHeader %}
 
-{% set pageTitle = "View and update your business details" %}
-{% set metaDescription = "View and change the details for your business." %}
-
 {% block beforeContent %}
     {{ subHeader(
-    businessName=businessName, 
-    sbi="123456789", 
-    userName="Alfred Waldron"
+    businessName=businessName,
+    sbi=singleBusinessIdentifier,
+    userName=userName
 ) }}
 {% endblock %}
 
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    {% if showSuccessBanner and successMessage %}
-      {{ govukNotificationBanner({
-        type: "success",
-        titleText: "Success",
-        html: "<h3 class=\"govuk-notification-banner__heading\">" + successMessage + "</h3>"
-      }) }}
-    {% endif %}
+      {# Notification banner #}
+      {% if notification %}
+        {{ govukNotificationBanner({
+          type: "success",
+          titleText: notification.title,
+          text: notification.text
+        }) }}
+      {% endif %}
 
     <h1 class="govuk-heading-l">
       View and update your business details
@@ -34,151 +32,202 @@
       Business contact details
     </h2>
 
-    <dl class="govuk-summary-list">
-      <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">
-          Business name
-        </dt>
-        <dd class="govuk-summary-list__value">
-          {{ businessName }}
-        </dd>
-        <dd class="govuk-summary-list__actions">
-          <a class="govuk-link govuk-link--no-visited-state" href="/business-name-change">Change<span class="govuk-visually-hidden"> business name</span></a>
-        </dd>
-      </div>
-      <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">
-          Business address
-        </dt>
-        <dd class="govuk-summary-list__value">
-          {{ formattedAddress | safe }}
-        </dd>
-        <dd class="govuk-summary-list__actions">
-          <a class="govuk-link govuk-link--no-visited-state" href="/business-address-enter">Change<span class="govuk-visually-hidden"> business address</span></a>
-        </dd>
-      </div>
-      <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">
-          Business phone numbers
-        </dt>
-        <dd class="govuk-summary-list__value">
-          <div class"govuk-summary-list__value-item">
-            Telephone:
-              {% if businessTelephone %}
-                {{ businessTelephone }}
-              {% else %}
-                <div class="govuk-hint" style="display: inline;">
-                  Not added
-                </div>
-              {% endif %}
-          </div>
+    {% set formattedAddress %}
+      {% for addressLine in address %}
+        <div>{{addressLine}}</div>
+      {% endfor %}
+    {% endset %}
 
-          <div class"govuk-summary-list__value-item">
-            Mobile:
-            {% if businessMobile %}
-              {{ businessMobile }}
-            {% else %}
-              <div class="govuk-hint" style="display: inline;">
-                Not added
-              </div>
-            {% endif %}
-          </div>
-        </dd>
-        <dd class="govuk-summary-list__actions">
-          <a class="govuk-link govuk-link--no-visited-state" href="/business-phone-numbers-change">Change<span class="govuk-visually-hidden"> business phone numbers</span></a>
-        </dd>
-      </div>
-      <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">
-          Business email address
-        </dt>
-        <dd class="govuk-summary-list__value">
-          {{ businessEmail }}
-        </dd>
-        <dd class="govuk-summary-list__actions">
-          <a class="govuk-link govuk-link--no-visited-state" href="/business-email-change">Change<span class="govuk-visually-hidden"> business email address</span></a>
-        </dd>
-      </div>
-    </dl>
+    {% set displayBusinessPhone %}
+      Telephone:
+      {% if businessTelephone %}
+      <div class="govuk-hint" style="display: inline;">{{ businessTelephone}}</div>
+      {% else %}
+        <div class="govuk-hint" style="display: inline;">Not added</div>
+      {% endif %}
+
+      Mobile:
+      {% if businessMobile %}
+        <div class="govuk-hint" style="display: inline;">{{ businessMobile }}</div>
+      {% else %}
+        <div class="govuk-hint" style="display: inline;">Not added</div>
+      {% endif %}
+    {% endset %}
+
+    {{ govukSummaryList({
+      rows: [
+        {
+          key: {
+            text: "Business name"
+          },
+          value: {
+            text: businessName
+          },
+          actions: {
+            items: [
+              {
+                href: "/business-name-change",
+                text: "Change",
+                visuallyHiddenText: "business name"
+              }
+            ]
+          }
+        },
+        {
+          key: {
+            text: "Business address"
+          },
+          value: {
+            html: formattedAddress
+          },
+          actions: {
+            items: [
+              {
+                href: "/business-address-enter",
+                text: "Change",
+                visuallyHiddenText: "business address"
+              }
+            ]
+          }
+        },
+        {
+          key: {
+            text: "Business phone numbers"
+          },
+          value: {
+            html: displayBusinessPhone
+          },
+          actions: {
+            items: [
+              {
+                href: "/business-phone-numbers-change",
+                text: "Change",
+                visuallyHiddenText: "business phone numbers"
+              }
+            ]
+          }
+        },
+        {
+          key: {
+            text: "Business email address"
+          },
+          value: {
+            text: businessEmail
+          },
+          actions: {
+            items: [
+              {
+                href: "/business-email-change",
+                text: "Change",
+                visuallyHiddenText: "business email address"
+              }
+            ]
+          }
+        }
+      ]
+    }) }}
 
     <h2 class="govuk-heading-m">
       Reference numbers
     </h2>
 
-    <dl class="govuk-summary-list">
-      <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">
-          Single business identifier (SBI)
-        </dt>
-        <dd class="govuk-summary-list__value">
-          123456789 
-        </dd>
-      </div>
-      <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">
-          VAT registration number
-        </dt>
-        <dd class="govuk-summary-list__value">
-          <span style="color:#505a5f">No number added</span>
-        </dd>
-        <dd class="govuk-summary-list__actions">
-          <a class="govuk-link govuk-link--no-visited-state" href="#">Add<span class="govuk-visually-hidden"> VAT registration number</span></a>
-        </dd>
-      </div>
-      <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">
-          Trader number
-        </dt>
-        <dd class="govuk-summary-list__value">
-          987654 
-        </dd>
-      </div>
-      <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">
-          Vendor registration number
-        </dt>
-        <dd class="govuk-summary-list__value">
-          699368 
-        </dd>
-      </div>
-      <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">
-          County Parish Holding (CPH) number
-        </dt>
-        <dd class="govuk-summary-list__value">
-          12/563/0998
-        </dd>
-      </div>
-    </dl>
+    {{ govukSummaryList({
+      rows: [
+        {
+          key: {
+            text: "Single business identifier (SBI)"
+          },
+          value: {
+            text: singleBusinessIdentifier
+          }
+        },
+        {
+          key: {
+            text: "VAT registration number"
+          },
+          value: {
+            html: '<span style="color:#505a5f">No number added</span>'
+          },
+          actions: {
+            items: [
+              {
+                href: "#",
+                text: "Add",
+                visuallyHiddenText: "VAT registration number"
+              }
+            ]
+          }
+        },
+        {
+          key: {
+            text: "Trader number"
+          },
+          value: {
+            text: tradeNumber
+          }
+        },
+        {
+          key: {
+            text: "Vendor registration number"
+          },
+          value: {
+            text: vendorRegistrationNumber
+          }
+        },
+        {
+          key: {
+            text: "County Parish Holding (CPH) number"
+          },
+          value: {
+            text: countyParishHoldingNumber
+          }
+        }
+      ]
+    }) }}
 
     <h2 class="govuk-heading-m">
       Additional details
     </h2>
 
-    <dl class="govuk-summary-list">
-      <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">
-          Business legal status
-        </dt>
-        <dd class="govuk-summary-list__value">
-          Sole proprietorship
-        </dd>
-        <dd class="govuk-summary-list__actions">
-          <a class="govuk-link govuk-link--no-visited-state" href="/business-legal-status-change">Change<span class="govuk-visually-hidden"> business legal status</span></a>
-        </dd>
-      </div>
-      <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">
-          Business type
-        </dt>
-        <dd class="govuk-summary-list__value">
-          Central or local government
-        </dd>
-        <dd class="govuk-summary-list__actions">
-          <a class="govuk-link govuk-link--no-visited-state" href="/business-type-change">Change<span class="govuk-visually-hidden"> business type</span></a>
-        </dd>
-      </div>
-    </dl>
+    {{ govukSummaryList({
+      rows: [
+        {
+          key: {
+            text: "Business legal status"
+          },
+          value: {
+            text: businessLegalStatus
+          },
+          actions: {
+            items: [
+              {
+                href: "/business-legal-status-change",
+                text: "Change",
+                visuallyHiddenText: "business legal status"
+              }
+            ]
+          }
+        },
+        {
+          key: {
+            text: "Business type"
+          },
+          value: {
+            text: businessType
+          },
+          actions: {
+            items: [
+              {
+                href: "/business-type-change",
+                text: "Change",
+                visuallyHiddenText: "business type"
+              }
+            ]
+          }
+        }
+      ]
+    }) }}
+
   </div>
 </div>
 {% endblock %}
